# rust-elfloader

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  README.md  README_zh.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: benchmark.rs
ci/: prepare.sh  run.sh
crates/mini-loader/: Cargo.toml
crates/mini-loader/src/: main.rs
crates/mini-loader/src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
crates/windows-elf-loader/: Cargo.toml
crates/windows-elf-loader/examples/: from_memory.rs  load.rs  relocate.rs
crates/windows-elf-loader/src/: lib.rs  mmap.rs
example_dylib/: a.rs  b.rs  c.rs
example_dylib/a/: Cargo.toml
example_dylib/a/src/: lib.rs
example_dylib/b/: Cargo.toml
example_dylib/b/src/: lib.rs
example_dylib/c/: Cargo.toml
example_dylib/c/src/: lib.rs
examples/: from_memory.rs  load.rs  load_dylib.rs  load_relocatable.rs  relocate.rs  relocate_dylib.rs
examples/fixtures/: libb.rs  libc.rs
mini-loader/: Cargo.toml  README.md
mini-loader/src/: lib.rs  main.rs  start.S  syscall.rs  trampoline.S
mini-loader/src/arch/: mod.rs  x86_64.rs
src/: dynamic.rs  ehdr.rs  error.rs  lib.rs  loader.rs  macros.rs  mmap.rs  object.rs  reader.rs  relocation.rs  segment.rs  symbol.rs  version.rs
src/arch/: aarch64.rs  arm.rs  loongarch64.rs  mod.rs  riscv32.rs  riscv64.rs  x86.rs  x86_64.rs
src/elf/: defs.rs  dynamic.rs  ehdr.rs  mod.rs  phdrs.rs  symbol.rs  version.rs
src/elf/hash/: custom.rs  gnu.rs  mod.rs  sysv.rs  traits.rs
src/format/: component.rs  dylib.rs  exec.rs  mod.rs  object.rs  rel.rs  relocatable.rs
src/format/dynamic/: common.rs  dylib.rs  exec.rs  mod.rs
src/format/image/: common.rs  dylib.rs  exec.rs  mod.rs
src/format/relocated/: dylib.rs  exec.rs  mod.rs
src/hash/: custom.rs  gnu.rs  mod.rs  sysv.rs
src/image/: builder.rs  mod.rs
src/image/common/: core.rs  dynamic.rs  mod.rs  symbol.rs
src/image/kinds/: dylib.rs  exec.rs  mod.rs  object.rs
src/input/: backend.rs  mod.rs  traits.rs
src/mmap/: libc.rs  linux_syscall.rs  mmap.rs  mod.rs  no_mmap.rs  windows.rs
src/object/: binary.rs  file.rs  mod.rs  socket.rs
src/os/: bare.rs  baremetal.rs  linux_syscall.rs  mod.rs  traits.rs  unix.rs  windows.rs
src/relocation/: dynamic.rs  dynamic_link.rs  mod.rs  static.rs  static_link.rs  traits.rs  utils.rs
src/segment/: mod.rs  phdr.rs  program.rs  section.rs  shdr.rs
test-exec/: exec_a.c  exec_a.rs
test-relocatable/: x86_64.rs
tests/: all.rs  common.rs  dynamic_linking.rs  gen_elf.rs  linking.rs  loading.rs  other.rs  static_linking.rs
tests/common/: mod.rs
tests/fixtures/c/: exec_a.c
tests/fixtures/rust/: liba.rs
tools/gen-elf/: Cargo.toml  README.md  README_zh.md
tools/gen-elf/src/: common.rs  lib.rs  main.rs  relocatable.rs
tools/gen-elf/src/arch/: arm.rs  loongarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
tools/gen-elf/src/dylib/: data.rs  dynamic.rs  layout.rs  mod.rs  reloc.rs  shdr.rs  symtab.rs  text.rs  tls.rs
tools/gen_relocs/: ARCHITECTURE.md  Cargo.toml
tools/gen_relocs/examples/: custom_config.rs
tools/gen_relocs/src/: common.rs  lib.rs  main.rs  relocatable.rs  writer.rs
tools/gen_relocs/src/arch/: aarch64.rs  arm.rs  loongarch64.rs  mod.rs  riscv32.rs  riscv64.rs  x86.rs  x86_64.rs
tools/gen_relocs/src/dylib/: data.rs  dynamic.rs  mod.rs  reloc.rs  shdr.rs  symtab.rs  text.rs  tls.rs
tools/gen_relocs/tests/: plt_generation.rs
windows-elf-loader/: Cargo.toml  README.md
windows-elf-loader/examples/: load.rs  relocate.rs
windows-elf-loader/src/: lib.rs
