[package]
name = "elf_loader"
version = "0.9.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["elf", "unix", "loader", "async"]
categories = ["no-std", "os", "embedded", "asynchronous"]
description = "A pure-rust library for loading all ELF format files from both memory and files."
exclude = [".gitignore"]

[workspace.package]
authors = ["wzhao <1207410841@qq.com>"]
edition = "2024"
repository = "https://github.com/weizhiao/elf_loader"
license = "MIT/Apache-2.0"
rust-version = "1.85.0"

[workspace]
members = ["mini-loader"]

[workspace.dependencies]
syscalls = { version = "0.6.18", default-features = false }

[dependencies.libc]
version = "0.2.169"
default-features = false
optional = true

[dependencies.syscalls]
workspace = true
optional = true

[dependencies.elf]
version = "0.7.4"
default-features = false

[dependencies.log]
version = "0.4.22"
default-features = false
optional = true

[dependencies]
bitflags = "2.8.0"
cfg-if = '1.0'

[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
required-features = ["fs", "mmap"]

[features]
default = ["fs", "mmap", "log"]

# Enable support for filesystems
fs = ["dep:syscalls"]
# Use libc as the backend, otherwise directly use linux syscalls
use-libc = ["dep:libc"]
# Use the default implementation on platforms with mmap when loading ELF files
mmap = ["dep:syscalls"]
# Use the version information of symbols when resolving them.
version = []
# Enable logging.
log = ["dep:log"]

[[example]]
name = "relocate_dylib"
required-features = ["fs", "mmap"]

[[example]]
name = "load_dylib"
required-features = ["mmap"]
