[package]
name = "elf_loader"
version = "0.12.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["elf", "unix", "loader", "async"]
categories = ["no-std", "os", "embedded", "asynchronous"]
description = "A pure-rust library for loading all ELF format files from both memory and files."
exclude = [".gitignore", "ci"]

[workspace.package]
authors = ["wzhao <1207410841@qq.com>"]
edition = "2024"
repository = "https://github.com/weizhiao/elf_loader"
license = "MIT/Apache-2.0"
rust-version = "1.85.0"

[workspace]
members = ["crates/windows-elf-loader", "crates/mini-loader"]

[workspace.dependencies]
syscalls = { version = "0.6.18", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    'Win32_Foundation',
    'Win32_System_Memory',
    'Win32_System_SystemInformation',
] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.171", default-features = false }

[dependencies.syscalls]
workspace = true
optional = true

[dependencies.elf]
version = "0.7.4"
default-features = false

[dependencies.log]
version = "0.4.27"
default-features = false
optional = true

[dependencies.portable-atomic]
version = "1.3"
default-features = false
optional = true
features = ["require-cas"]

[dependencies.portable-atomic-util]
version = "0.2"
default-features = false
optional = true
features = ["alloc"]

[dependencies]
bitflags = "2.9.0"
cfg-if = '1.0'
delegate = "0.13.3"

[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["lazy"]

# Use linux syscalls
use-syscall = ["dep:syscalls"]
# Use the version information of symbols when resolving them.
version = []
# Enable logging.
log = ["dep:log"]
# Use rel as the relocation type
rel = []
# Enable lazy binding
lazy = []
# support target without native pointer size atomic operation
portable-atomic = ["dep:portable-atomic", "dep:portable-atomic-util"]

[[example]]
name = "relocate_dylib"

[[example]]
name = "load_dylib"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
codegen-units = 1
