[package]
name = "elf_loader"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["elf", "unix", "loader"]
categories = ["no-std", "os", "embedded"]
description = "A high-performance, no_std compliant ELF loader and JIT linker for Rust."
exclude = [".gitignore", "ci", "tests", "examples", "docs", "docker"]

[workspace.package]
authors = ["wzhao <1207410841@qq.com>"]
edition = "2024"
repository = "https://github.com/weizhiao/elf_loader"
license = "MIT/Apache-2.0"
rust-version = "1.88.0"

[workspace]
members = ["crates/windows-elf-loader", "crates/mini-loader", "tools/gen-elf"]

[workspace.dependencies]
syscalls = { version = "0.7.0", default-features = false }
elf = { version = "0.8", default-features = false }
cfg-if = '1.0'

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
	'Win32_Foundation',
	'Win32_System_Memory',
	'Win32_System_SystemInformation',
	"Win32_Security",
	"Win32_System_IO",
	"Win32_Storage",
	"Win32_Storage_FileSystem",
	"Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.171", default-features = false }

[build-dependencies]
cc = "1.0"

[dependencies.syscalls]
workspace = true
optional = true

[dependencies.elf]
workspace = true

[dependencies.cfg-if]
workspace = true

[dependencies.log]
version = "0.4.27"
default-features = false
optional = true

[dependencies.portable-atomic]
version = "1.3"
default-features = false
optional = true
features = ["require-cas"]

[dependencies.portable-atomic-util]
version = "0.2"
default-features = false
optional = true
features = ["alloc"]

[dependencies.hashbrown]
version = "0.16.0"
default-features = false
features = ["default-hasher"]

[dependencies.foldhash]
version = "0.2.0"
default-features = false

[dependencies]
bitflags = "2.9.0"

[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.5"
env_logger = "0.11.6"
gen-elf = { path = "tools/gen-elf" }
object = "0.38.0"

[[bench]]
name = "benchmark"
harness = false

[features]
default = []

# Use linux syscalls
use-syscall = ["dep:syscalls"]
# Use the version information of symbols when resolving them.
version = []
# Enable logging.
log = ["dep:log"]
# support target without native pointer size atomic operation
portable-atomic = ["dep:portable-atomic", "dep:portable-atomic-util"]

[[example]]
name = "relocate_dylib"

[[example]]
name = "load_dylib"

[profile.release]
panic = "abort"
opt-level = "s"
lto = "thin"
codegen-units = 1
