[package]
name = "mini-loader"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "The mini-loader is capable of loading and executing ELF files, including Executable file and Position-Independent Executable file"
version = "1.1.0"
keywords = ["elf", "unix", "loader"]
categories = ["no-std", "os"]

[dependencies]
syscalls = { workspace = true }
elf_loader = { path = "../", version = "0.9.0", features = ["fs", "mmap"] }
linked_list_allocator = { version = "0.10.5" }

[[bin]]
name = "mini-loader"
