[package]
name = "mini-loader"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "The mini-loader is capable of loading and executing ELF files, including Executable file and Position-Independent Executable file"
version = "1.1.1"
keywords = ["elf", "unix", "loader"]
categories = ["no-std", "os"]

[dependencies]
syscalls = { workspace = true }
elf_loader = { version = "=0.9.3", default-features = false, features = [
	"fs",
	"mmap",
	"use-syscall",
] }
linked_list_allocator = { version = "0.10.5" }
elf = { version = "0.7.4", default-features = false }

[[bin]]
name = "mini-loader"
