[package]
name = "windows-elf-loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Be capable of loading the elf dynamic library on Windows."
keywords = ["elf", "windows", "loader"]
categories = ["os", "embedded"]

[dependencies.elf_loader]
version = "=0.12.0"
default-features = false

[dependencies.windows-sys]
version = "0.59"
features = [
    'Win32_Foundation',
    'Win32_System_Memory',
	'Win32_System_SystemInformation',
]