[package]
name = "mini-loader"
authors = ["wzhao <1207410841@qq.com>"]
edition = "2024"
repository = "https://github.com/weizhiao/elf_loader"
license = "MIT/Apache-2.0"
rust-version = "1.85.0"
readme = "README.md"
description = "The mini-loader is capable of loading and executing ELF files, including Executable file and Position-Independent Executable file"
version = "1.2.0"
keywords = ["elf", "unix", "loader"]
categories = ["no-std", "os"]

[dependencies]
cfg-if = '1.0'
itoa = "1.0.15"
syscalls = { version = "0.6.18", default-features = false }
elf_loader = { path= "../../", default-features = false, features = [
	"use-syscall",
] }
linked_list_allocator = { version = "0.10.5" }
elf = { version = "0.7.4", default-features = false }

[[bin]]
name = "mini-loader"
