[package]
name = "windows-elf-loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Be capable of loading the elf dynamic library on Windows."
keywords = ["elf", "windows", "loader"]
categories = ["os", "embedded"]

[dependencies.elf_loader]
path = "../../"
default-features = false
features = ["log"]
