[package]
name = "windows-elf-loader"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Be capable of loading the elf dynamic library on Windows."
keywords = ["elf", "windows", "loader"]
categories = ["os", "embedded"]

[dependencies.elf_loader]
version = "=0.13.0"
default-features = false
features = ["log"]
