[package]
name = "gen-elf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A utility for generating ELF files for testing ELF loaders."
readme = "README.md"

[dependencies]
object = { version = "0.38", features = ["write_core"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
byteorder = "1.4"
